--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
-    <title>Anh Dung Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Anh Dung Portfolio</h1>
-    <h2>I'm Web developer</h2>
-    <hr/>
-    <h3><a href="./public/my-movie-ranking.html">My movie ranking project</a></h3>
-    <img src="./assets/images/my-movie-ranking.png" alt="list of movies ranking">
-    <h3><a href="./public/birthday-invite.html">My birthday invite</a></h3>
-    <img src="./assets/images/my-birthday-invite.png" alt="a birthday cake">
-    <hr>
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <div class="headline1">
+        <h2>Portfolio</h2>
+        <div class="box">
+            <h3 class="title home">Home</h3>
+            <h3 class="title about">About</h3>
+            <h3 class="title contac">Contact</h3>
+            <h3 class="title blog">Blog</h3>
+        </div>
+    </div>
+
+    <div class="headline2">
+        <div class="box1">
+            <h2 class="name">I'm Leon Nguyen</h2>
+            <h2 class="job"><span class="art">Art </span>and <span class="design">Designer</span></h2>
+        </div>    
+
+        <div class="box2">
+            <img class="me1" src="./asset/me2.png">
+        </div>
+    </div>
+
+
+
+
+
 </body>
+
+
+
+
 
 </html>
